--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^5.0.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^5.2.0",
+    "gatsby-plugin-styled-components": "^6.2.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "styled-components": "^5.3.6"
   },
   "repository": {
     "type": "git",
